Added items to side nav

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -1,1 +1,21 @@
-<p>I'm sidenav comp</p>
+<div class="logo-wrapper">
+    <img src="assets/img/costic-logo-216x62.png" class="logo" alt="logo">
+</div>
+<div class="menu-list">
+    <div class="menu-item">
+        <mat-icon>home</mat-icon>
+        <span>Home</span>
+    </div>
+    <div class="menu-item">
+        <mat-icon>store_mall_directory</mat-icon>
+        <span>Restaurants</span>
+    </div>
+    <div class="menu-item">
+        <mat-icon>people</mat-icon>
+        <span>Employees</span>
+    </div>
+    <div class="menu-item">
+        <mat-icon> restaurant_menu</mat-icon>
+        <span>Menus</span>
+    </div>
+</div>
