--- a/owner/owner-client/src/app/_components/main-components/main-components.component.html
+++ b/owner/owner-client/src/app/_components/main-components/main-components.component.html
@@ -1,10 +1,10 @@
 <mat-drawer-container class="main-wrapper" [hasBackdrop]="hasBackdrop">
-    <mat-drawer #drawer [mode]="mode" [opened]="sideOpened">
+    <mat-drawer #drawer [mode]="mode" [opened]="false">
         <app-side-nav></app-side-nav>
     </mat-drawer>
     <mat-drawer-content>
         <app-top-nav>
-            <button mat-icon-button aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
+            <button mat-icon-button (click)="drawer.toggle()">
                 <mat-icon>menu</mat-icon>
               </button>
         </app-top-nav>
