Created side navigation with items

--- a/owner/owner-client/src/app/_components/main-components/main-components.component.html
+++ b/owner/owner-client/src/app/_components/main-components/main-components.component.html
@@ -8,5 +8,8 @@
                 <mat-icon>menu</mat-icon>
               </button>
         </app-top-nav>
+        <div class="content-wrapper">
+            <router-outlet></router-outlet>
+        </div>
     </mat-drawer-content>
 </mat-drawer-container>
