--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -2,11 +2,11 @@
     <img src="assets/img/costic-logo-216x62.png" class="logo" alt="logo">
 </div>
 <div class="menu-list">
-    <div class="menu-item">
+    <div class="menu-item" routerLink="/home" routerLinkActive="active">
         <mat-icon>home</mat-icon>
         <span>Home</span>
     </div>
-    <div class="menu-item">
+    <div class="menu-item" routerLink="/restaurants" routerLinkActive="active">
         <mat-icon>store_mall_directory</mat-icon>
         <span>Restaurants</span>
     </div>
