--- a/owner/owner-client/src/app/_components/main-components/main-components.component.css
+++ b/owner/owner-client/src/app/_components/main-components/main-components.component.css
@@ -1,3 +1,10 @@
 .main-wrapper {
     height: 100%;
 }
+
+.content-wrapper {
+    padding: 2rem 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 90vh;
+}
