--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
@@ -18,10 +18,10 @@
     </div>
     <div class="right-side">
       <button mat-icon-button>
-        <mat-icon matBadge="5">mail_outline</mat-icon>
+        <mat-icon matBadge="5" aria-hidden="false">mail_outline</mat-icon>
       </button>
       <button mat-icon-button>
-        <mat-icon matBadge="3">notifications_none</mat-icon>
+        <mat-icon matBadge="3" aria-hidden="false">notifications_none</mat-icon>
       </button>
       <div class="img-wrapper">
         <img src="assets/img/profile.jpg" alt="profile picture" class="img">
