Creating side nav dropdown

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -5,9 +5,9 @@
     <app-side-nav-item [name]="'home'" [url]="'/home'">
         <mat-icon svgIcon="house-svg" class="svg"></mat-icon>
     </app-side-nav-item>
-    <app-side-nav-item [name]="'restaurants'" [url]="'/restaurants'">
+    <app-side-nav-dropdown [name]="'restaurants'" [itemListObj]="restaurantsLinkItems">
         <mat-icon class="svg" svgIcon="restaurant-svg"></mat-icon>
-    </app-side-nav-item>
+    </app-side-nav-dropdown>
     <app-side-nav-item [name]="'employees'" [url]="'/employees'">
         <mat-icon class="svg" svgIcon="employees-svg"></mat-icon>
     </app-side-nav-item>
