--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-item/side-nav-item.component.css
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-item/side-nav-item.component.css
@@ -8,11 +8,11 @@
 }
 
 .main-wrapper:hover {
-    color: red;
-    border-right: 2px solid red;
+    color: var(--primary);
+    border-right: 2px solid var(--primary);
 }
 
 .active {
-    color: red;
-    border-right: 2px solid red;
+    color: var(--primary);
+    border-right: 2px solid var(--primary);
 }
