--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.css
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.css
@@ -5,11 +5,11 @@
     align-items: center;
     gap: 2rem;
     cursor: pointer;
+    user-select: none;
 }
 
 .main-wrapper:hover {
     color: var(--primary);
-    border-right: 2px solid var(--primary);
 }
 
 .svg {
@@ -19,21 +19,32 @@
 .list-wrapper {
     display: flex;
     flex-direction: column;
-    background-color: lightgray;
+    background-color: white;
     color: black;
     font-size: 14px;
+    overflow: hidden;
 }
 
 .list-item-wrapper {
     width: 100%;
-    padding: 0.5rem 0.5rem;
-    background-color: lightgray;    
+    padding: 0.5rem 0.5rem;  
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    height: 35px;
 }
 
 .list-item-wrapper:hover {
+    color: var(--primary);
+    border-left: 5px solid var(--primary);
+}
+
+.active {
+    color: var(--primary);
+    border-left: 5px solid var(--primary);
+}
+
+.active-main {
     color: var(--primary);
 }
