Added accent color

--- a/owner/owner-client/src/app/_components/main-components/top-nav/right-toggle/right-toggle.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/right-toggle/right-toggle.component.html
@@ -4,10 +4,10 @@
 <mat-menu #menu="matMenu">
     <div class="menu-wrapper">
         <button mat-icon-button>
-            <mat-icon matBadge="5" aria-hidden="false">mail_outline</mat-icon>
+            <mat-icon matBadge="5" aria-hidden="false" color="accent">mail_outline</mat-icon>
         </button>
         <button mat-icon-button>
-            <mat-icon matBadge="3" aria-hidden="false">notifications_none</mat-icon>
+            <mat-icon matBadge="3" aria-hidden="false" color="accent">notifications_none</mat-icon>
         </button>
         <div class="img-wrapper">
             <img src="assets/img/profile.jpg" alt="profile picture" class="img">
