--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
@@ -6,13 +6,9 @@
       <img src="assets/img/costic-logo-84x41.png" alt="logo">
     </div>
     <!-- ************************************************ -->
-    <div class="input-wrapper">
-      <input type="text" placeholder="search..." class="search-input">
-      <mat-icon>search</mat-icon>
+    <div class="search-wrapper">
+      <app-search-bar></app-search-bar>
     </div>
-    <!-- <button mat-icon-button class="right-toggle">
-      <mat-icon>format_align_right</mat-icon>
-    </button> -->
     <div class="right-toggle">
       <app-right-toggle></app-right-toggle>
     </div>
