--- a/owner/owner-client/src/theme.scss
+++ b/owner/owner-client/src/theme.scss
@@ -2,8 +2,8 @@
 
 @include mat.core();
 
-$my-primary: mat.define-palette(mat.$orange-palette, 500);
-$my-accent: mat.define-palette(mat.$deep-orange-palette, A200, A100, A400);
+$my-primary: mat.define-palette(mat.$orange-palette, 700);
+$my-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
 
 $my-theme: mat.define-dark-theme((
  color: (
