--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
@@ -20,6 +20,7 @@
       class="list-item-wrapper"
       routerLink="{{ item.url }}"
       routerLinkActive="active"
+      [routerLinkActiveOptions]="{exact: true}"
       (isActiveChange)="mainIsActive($event)"
     >
       {{ item.name }}
