--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -5,7 +5,7 @@
     <app-side-nav-item [name]="'home'" [url]="'/home'">
         <mat-icon svgIcon="house-svg" class="svg"></mat-icon>
     </app-side-nav-item>
-    <app-side-nav-dropdown [name]="'restaurants'" [itemListObj]="restaurantsLinkItems">
+    <app-side-nav-dropdown [name]="'restaurants'" [itemListObj]="restaurantsLinkItems" [mainRoute]="'/restaurants'">
         <mat-icon class="svg" svgIcon="restaurant-svg"></mat-icon>
     </app-side-nav-dropdown>
     <app-side-nav-item [name]="'employees'" [url]="'/employees'">
