--- a/owner/owner-client/src/styles.css
+++ b/owner/owner-client/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/cdk/overlay-prebuilt.css';  /* potrebno za photo gallery */
 
 * {
     margin: 0;
@@ -11,4 +12,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 :root {
     --primary: #F57C00;
     --accent: #3F51B5;
+}
+
+.img {
+    width: 100%;
+    height: auto;
 }
