--- a/owner/owner-client/src/styles.css
+++ b/owner/owner-client/src/styles.css
@@ -1,20 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/cdk/overlay-prebuilt.css';  /* potrebno za photo gallery */
+@import "~@angular/cdk/overlay-prebuilt.css";
 
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 
 :root {
-    --primary: #F57C00;
-    --accent: #3F51B5;
+  --primary: #F57C00;
+  --accent: #3F51B5;
 }
 
 .img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
