--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
@@ -4,8 +4,8 @@
 >
   <ng-content></ng-content>
   <span>{{ name | titlecase }}</span>
-  <mat-icon svgIcon="arrow-down-svg" class="svg" *ngIf="!isOpen"></mat-icon>
-  <mat-icon svgIcon="arrow-up-svg" class="svg" *ngIf="isOpen"></mat-icon>
+  <mat-icon svgIcon="arrow-down" class="svg" *ngIf="!isOpen"></mat-icon>
+  <mat-icon svgIcon="arrow-up" class="svg" *ngIf="isOpen"></mat-icon>
 </div>
 <div
   class="list-wrapper"
