--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -3,15 +3,15 @@
 </div>
 <div class="side-nav-item-wrapper">
     <app-side-nav-item [name]="'home'" [url]="'/home'">
-        <mat-icon svgIcon="house-svg" class="svg"></mat-icon>
+        <mat-icon svgIcon="home" class="svg"></mat-icon>
     </app-side-nav-item>
     <app-side-nav-dropdown [name]="'restaurants'" [itemListObj]="restaurantsLinkItems">
-        <mat-icon class="svg" svgIcon="restaurant-svg"></mat-icon>
+        <mat-icon class="svg" svgIcon="restaurant"></mat-icon>
     </app-side-nav-dropdown>
     <app-side-nav-item [name]="'employees'" [url]="'/employees'">
-        <mat-icon class="svg" svgIcon="employees-svg"></mat-icon>
+        <mat-icon class="svg" svgIcon="users"></mat-icon>
     </app-side-nav-item>
     <app-side-nav-item [name]="'menus'" [url]="'menus'">
-        <mat-icon class="svg" svgIcon="menus-svg"></mat-icon>
+        <mat-icon class="svg" svgIcon="menu"></mat-icon>
     </app-side-nav-item>
 </div>
