created restaurant card

--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants.component.html
@@ -1,1 +1,11 @@
-<p>restaurants works!</p>
+<div class="main-wrapper">
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+    <app-restaurant-card></app-restaurant-card>
+</div>
