--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants.component.html
@@ -1,11 +1,5 @@
 <div class="main-wrapper">
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
-    <app-restaurant-card></app-restaurant-card>
+    <ng-container *ngFor="let restaurant of restaurants">
+        <app-restaurant-card [restaurant]="restaurant"></app-restaurant-card>
+    </ng-container>
 </div>
