--- a/owner/owner-client/src/app/_components/main-components/main-components.component.css
+++ b/owner/owner-client/src/app/_components/main-components/main-components.component.css
@@ -3,8 +3,5 @@
 }
 
 .content-wrapper {
-    padding: 2rem 1rem;
-    overflow-x: hidden;
-    overflow-y: auto;
-    height: 90vh;
+    padding: 5rem 1rem 2rem 1rem;
 }
