--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
@@ -1,3 +1,8 @@
+mat-toolbar {
+  position: fixed;
+  z-index: 3;
+}
+
 .nav-wrapper {
     width: 100%;
     display: flex;
@@ -32,7 +37,6 @@
   .search-wrapper {
     width: 35%;
   }
-  
   
   @media only screen and (min-width: 768px) {
     .right-toggle {
