working on restaurant details component

--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.html
@@ -1,1 +1,60 @@
-<p>restaurants-details works!</p>
+<gallery [items]="restaurantImages" gallerize thumbPosition="right"></gallery>
+<br />
+<div class="content-wrapper">
+  <div class="restaurant-info">
+    <h1>Info</h1>
+    <div class="table-wrapper">
+      <div class="table-row"><span>Name</span><span>Rupa</span></div>
+      <mat-divider></mat-divider>
+      <div class="table-row">
+        <span>Country</span><span>Bosnia and Herzegovina</span>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="table-row"><span>City</span><span>Doboj</span></div>
+      <mat-divider></mat-divider>
+      <div class="table-row">
+        <span>Address</span><span>Braca Jugovic 85</span>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="table-row"><span>Postal Code</span><span>75000</span></div>
+      <mat-divider></mat-divider>
+      <div class="table-row"><span>Phone</span><span>064545452155</span></div>
+      <mat-divider></mat-divider>
+      <div class="table-row">
+        <span>Facebook</span><span>https://www.facebook.com</span>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="table-row">
+        <span>Instagram</span><span>https://www.instagram.com</span>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="table-row">
+        <span>Website</span><span>https://www.kdfajfkds.com</span>
+      </div>
+      <mat-divider></mat-divider>
+    </div>
+
+    <div class="btn-wrapper">
+      <button mat-raised-button color="accent">
+        <mat-icon svgIcon="edit"></mat-icon>
+        Edit
+      </button>
+      <button mat-raised-button color="warn">
+        <mat-icon svgIcon="delete"></mat-icon>
+        Delete
+      </button>
+    </div>
+  </div>
+  <div class="restaurant-description">
+    <h1>Description</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos deleniti
+      adipisci ab doloribus culpa fuga quibusdam distinctio quas, quod eum
+      voluptate, repellendus accusamus quasi. Eos praesentium fuga
+      exercitationem porro iusto. Ipsa exercitationem corrupti ipsum doloribus
+      fugit quos! Saepe facere omnis, tenetur reiciendis beatae ratione nesciunt
+      nulla quaerat doloribus, quas a reprehenderit consectetur impedit maxime
+      delectus, aliquid mollitia? Fuga, officiis assumenda.
+    </p>
+  </div>
+</div>
